Google Pixel 3a XL Updated keyboard layout.

--- a/phone/pixel3axl/keyboard_layout.htm
+++ b/phone/pixel3axl/keyboard_layout.htm
@@ -272,7 +272,214 @@ buttons:
         keysym: "Right"
 </pre>
 <p>
-<img src="keyboard_layout/7.jpg" class="maxSize">
+<img src="keyboard_layout/7.jpg" class="maxSize"><br><br>
+
+司徒最後發現，官方的Keyboard Layout佈局還是比較適合觸控使用，司徒將原本的Ctrl、Alt改換成Tab、Ctrl(~/.local/share/squeekboard/keyboards/terminal/us.yaml)
+</p>
+<pre>
+---
+outlines:
+    default: { width: 35.33, height: 46 }
+    action:  { width: 59,    height: 46 }
+    altline: { width: 52.67, height: 46 }
+    wide: { width: 59, height: 46 }
+    spaceline: { width: 140, height: 46 }
+    special: { width: 44, height: 46 }
+    small: { width: 59, height: 22 }
+
+views:
+    base:
+        - "Tab Ctrl ↑ ↓ ← →"
+        - "q w e r t y u i o p"
+        - "a s d f g h j k l"
+        - "Shift_L   z x c v b n m  BackSpace"
+        - "show_numbers preferences      space        show_actions Return"
+    upper:
+        - "Tab Ctrl PgUp PgDn Home End"
+        - "Q W E R T Y U I O P"
+        - "A S D F G H J K L"
+        - "Shift_L   Z X C V B N M  BackSpace"
+        - "show_numbers preferences      space        show_actions Return"
+    numbers:
+        - "Tab Ctrl ↑ ↓ ← →"
+        - "1 2 3 4 5 6 7 8 9 0"
+        - "* # $ / & - _ + ( )"
+        - "show_symbols   , \" ' colon ; ! ?  BackSpace"
+        - "show_letters preferences         space        period Return"
+    symbols:
+        - "Tab Ctrl ↑ ↓ ← →"
+        - "~ ` | · √ π τ ÷ × ¶"
+        - "© ® £ € ¥ ^ ° @ { }"
+        - "show_numbers_from_symbols   \\ % < > = [ ]  BackSpace"
+        - "show_letters preferences         space        period Return"
+    actions:
+        - "Tab Ctrl PgUp PgDn Home End"
+        - "F1  F2  F3  F4  F5  F6"
+        - "F7  F8  F9  F10 F11 F12"
+        - "Esc Alt Pause Insert Up Del"
+        - "show_letters Menu Break Left Down Right"
+
+buttons:
+    Shift_L:
+        action:
+            locking:
+                lock_view: "upper"
+                unlock_view: "base"
+        outline: "altline"
+        icon: "key-shift"
+    BackSpace:
+        outline: "altline"
+        icon: "edit-clear-symbolic"
+        action: erase
+    preferences:
+        action: "show_prefs"
+        outline: "special"
+        icon: "keyboard-mode-symbolic"
+    show_numbers:
+        action:
+            set_view: "numbers"
+        outline: "wide"
+        label: "123"
+    show_numbers_from_symbols:
+        action:
+            set_view: "numbers"
+        outline: "altline"
+        label: "123"
+    show_letters:
+        action:
+            set_view: "base"
+        outline: "wide"
+        label: "ABC"
+    show_symbols:
+        action:
+            set_view: "symbols"
+        outline: "altline"
+        label: "τ=\\"
+    show_actions:
+        action:
+            set_view: "actions"
+        outline: "altline"
+        label: ">_"
+    period:
+        outline: "altline"
+        text: "."
+    space:
+        outline: "spaceline"
+        text: " "
+    Return:
+        outline: "wide"
+        icon: "key-enter"
+        keysym: "Return"
+    colon:
+        text: ":"
+    F1:
+        outline: "action"
+        keysym: "F1"
+    F2:
+        outline: "action"
+        keysym: "F2"
+    F3:
+        outline: "action"
+        keysym: "F3"
+    F4:
+        outline: "action"
+        keysym: "F4"
+    F5:
+        outline: "action"
+        keysym: "F5"
+    F6:
+        outline: "action"
+        keysym: "F6"
+    F7:
+        outline: "action"
+        keysym: "F7"
+    F8:
+        outline: "action"
+        keysym: "F8"
+    F9:
+        outline: "action"
+        keysym: "F9"
+    F10:
+        outline: "action"
+        keysym: "F10"
+    F11:
+        outline: "action"
+        keysym: "F11"
+    F12:
+        outline: "action"
+        keysym: "F12"
+    Esc:
+        outline: "action"
+        keysym: "Escape"
+    Tab:
+        outline: "small"
+        keysym: "Tab"
+    Del:
+        outline: "action"
+        keysym: "Delete"
+    Insert:
+        outline: "action"
+        keysym: "Insert"
+    Menu:
+        outline: "action"
+        keysym: "Menu"
+    Pause:
+        outline: "action"
+        keysym: "Pause"
+    Break:
+        outline: "action"
+        keysym: "Break"
+    Home:
+        outline: "small"
+        keysym: "Home"
+    End:
+        outline: "small"
+        keysym: "End"
+    PgUp:
+        outline: "small"
+        keysym: "Page_Up"
+    PgDn:
+        outline: "small"
+        keysym: "Page_Down"
+    "↑":
+        outline: "small"
+        keysym: "Up"
+    "↓":
+        outline: "small"
+        keysym: "Down"
+    "←":
+        outline: "small"
+        keysym: "Left"
+    "→":
+        outline: "small"
+        keysym: "Right"
+    Up:
+        label: "↑"
+        outline: "action"
+        keysym: "Up"
+    Left:
+        label: "←"
+        outline: "action"
+        keysym: "Left"
+    Down:
+        label: "↓"
+        outline: "action"
+        keysym: "Down"
+    Right:
+        label: "→"
+        outline: "action"
+        keysym: "Right"
+    Ctrl:
+        modifier: "Control"
+        outline: "small"
+        label: "Ctrl"
+    Alt:
+        modifier: "Alt"
+        outline: "action"
+        label: "Alt"
+</pre>
+<p>
+<img src="keyboard_layout/9.jpg" class="maxSize">
 </p>
 
 <p>
