--- a/phone.htm
+++ b/phone.htm
@@ -2066,6 +2066,10 @@ Partition Table</a><br>
   如何取得目前Keyboard使用的yaml檔案名稱</a><br>  
   
   &emsp;&emsp;&lowast;
+  <a href="phone/pixel3axl/dd_fix_mkdtimg.htm">
+  解決"mkdtimg not found"問題</a><br>
+  
+  &emsp;&emsp;&lowast;
   <a href="phone/pixel3axl/dd_fix_yylloc.htm">
   解決"multiple definition of yylloc"問題</a><br>
   
