Google Pixel 3a XL typo.

--- a/phone/pixel3axl/dd_fix_mkdtimg.htm
+++ b/phone/pixel3axl/dd_fix_mkdtimg.htm
@@ -56,7 +56,7 @@ $ cd
 $ wget https://android.googlesource.com/platform/system/libufdt/+archive/refs/heads/master/utils.tar.gz
 $ tar xvf utils.tar.gz
 $ sudo cp src/mkdtboimg.py /usr/bin/mkdtimg
-$ sudo a+x /usr/bin/mkdtimg
+$ sudo chmod a+x /usr/bin/mkdtimg
 </pre><br>
 
 <p>
