--- a/phone/pixel3axl/repack_boot_img.htm
+++ b/phone/pixel3axl/repack_boot_img.htm
@@ -63,9 +63,8 @@ DTB_OFFSET=0x1f00000
 CMDLINE="console=ttyMSM0,115200n8 androidboot.console=ttyMSM0 printk.devkmsg=on msm_rtb.filter=0x237 ehci-hcd.park=3 service_locator.enable=1 firmware_class.path=/vendor/firmware datapart=/dev/mmcblk0p72 cgroup.memory=nokmem lpm_levels.sleep_disabled=1 apparmor=1 security=apparmor"
 
 rm -rf boot_new.img
-mkbootimg --kernel kernel --ramdisk ramdisk --dtb dtb --cmdline "$CMDLINE" --base $BASE --kernel_offset $KERNEL_OFFSET --ramdisk_offset $RAMDISK_OFFSET --second_offset $SECOND_OFFSET --dtb_offset $DTB_OFFSET --pagesize $PAGE_SIZE -o boot_new.img
+mkbootimg --kernel Image.lz4-dtb --ramdisk ramdisk --dtb dtb --cmdline "$CMDLINE" --base $BASE --kernel_offset $KERNEL_OFFSET --ramdisk_offset $RAMDISK_OFFSET --second_offset $SECOND_OFFSET --dtb_offset $DTB_OFFSET --pagesize $PAGE_SIZE -o boot_new.img
 sudo dd if=boot_new.img of=/dev/mmcblk0p13
-sudo dd if=boot_new.img of=/dev/mmcblk0p14
 sync
 </pre><br>
 
