Google Pixel 3a XL How to build kernel 4.9.124.

--- a/phone.htm
+++ b/phone.htm
@@ -2084,6 +2084,11 @@ Partition Table</a><br>
   &emsp;&emsp;&lowast;
   <a href="phone/pixel3axl/dd_fix_cmn.htm">
   解決"cam_sensor_cmn_header.h No such file or directory"問題</a><br>  
+  
+  &emsp;&emsp;&lowast;
+  <a href="phone/pixel3axl/dd_build_kernel-4.9.124.htm">
+  build kernel 4.9.124</a><br>  
+  
 <br><br><br><br>
 
 </p>
