Google Pixel 3a XL Updated keyboard layout.

--- a/phone/pixel3axl/keyboard_layout.htm
+++ b/phone/pixel3axl/keyboard_layout.htm
@@ -66,7 +66,7 @@ Phosh-Squeekboard-Keyboard<br>
 queekboard-terminal-layout<br>
 <img src="keyboard_layout/6.jpg" class="maxSize"><br><br>
 
-司徒目前使用queekboard-terminal-layout作為Terminal的Keyboard Layout，然後，新增一個Custom Layout作為觸控遊戲手把使用(~/.local/share/squeekboard/keyboards/custom.yaml)
+~/.local/share/squeekboard/keyboards/custom.yaml
 </p>
 <pre>
 ---
@@ -76,205 +76,91 @@ outlines:
 
 views:
     base:
-        - "L d1 R d2 F d1 preferences"
-        - "d1 ↑ d1 0 1 d1 X d1"
-        - "← d1 → d2 Y d1 A"
-        - "d1 ↓ d1 N M d1 B d1"
+        - "s00 d01 s01 d02     s02 d01 p00"
+        - "d01 s03 d01 s04 s05 d01 s06 d01"
+        - "s07 d01 s08 d02     s09 d01 s10"
+        - "d01 s11 d01 s12 s13 d01 s14 d01"
 
 buttons:
-    d1:
+    d01:
         action:
             set_view: "base"
         outline: "default"
         label: ""
-    d2:
+    d02:
         action:
             set_view: "base"
         outline: "action"
         label: ""
-    preferences:
+    p00:
         action: "show_prefs"
         outline: "default"
         icon: "keyboard-mode-symbolic"
-    "↑":
+    s00:
         outline: "default"
-        keysym: "Up"
-    "↓":
-        outline: "default"
-        keysym: "Down"
-    "←":
-        outline: "default"
-        keysym: "Left"
-    "→":
-        outline: "default"
-        keysym: "Right"
-</pre>
-<p>
-<img src="keyboard_layout/8.jpg" class="maxSize"><br><br>
-
-~/.local/share/squeekboard/keyboards/terminal/us.yaml
-</p>
-<pre>
----
-outlines:
-    default: { width: 48, height: 64 }
-    menu: { width: 98, height: 64 }
-    altline: { width: 68, height: 64 }
-    spaceline: { width: 165, height: 64 }
-    special: { width: 38, height: 64 }
-    action: { width: 48, height: 64 }
-    fkey: { width: 40, height: 64 }
-
-views:
-    base:
-        - "1 2 3 4 5 6 7 8 9 0 BackSpace"
-        - "q w e r t y u i o p show_symbols"
-        - "a s d f g h j k l Return"
-        - "Shift_L   z x c v b n m , ↑ ."
-        - "Ctrl Tab show_eschars preferences         space ← ↓ →"
-    upper:
-        - "! @ # $ % ^ &amp; * ( ) BackSpace"
-        - "Q W E R T Y U I O P show_symbols"
-        - "A S D F G H J K L Return"
-        - "Shift_L   Z X C V B N M  - PgUp /"
-        - "Alt Esc show_eschars preferences         space  Home PgDn End"
-    symbols:
-        - "~ ` ´ - _ + = ° © ® BackSpace"
-        - "[ ] { } \\ | ÷ × √ show_letters"
-        - "; : ' \" · € £ ¥ Return"
-        - "Del / ? § π τ µ ¶ &lt; ↑ &gt;"
-        - "Ctrl Tab show_eschars preferences   space  ← ↓ →"
-    eschars:
-        - "F1 F2 F3 F4 F5 F6 F7 F8 F9 F10 F11 F12 BackSpace"
-        - "ä è é ö ü Ä È É Ö Ü show_symbols"
-        - "à â ê î ô À Â Ê Î Ô Return"
-        - "Del  « » ç Ç æ œ ß  „ PgUp “"
-        - "Alt Esc show_letters preferences         space   Home PgDn End"
-
-buttons:
-    Shift_L:
-        action:
-            locking:
-                lock_view: "upper"
-                unlock_view: "base"
-        outline: "altline"
-        icon: "key-shift"
-    Ctrl:
-        modifier: "Control"
-        outline: "altline"
-        label: "Ctrl"
-    Alt:
-        modifier: "Alt"
-        outline: "altline"
-        label: "Alt"
-    BackSpace:
-        outline: "altline"
-        icon: "edit-clear-symbolic"
-        action: "erase"
-    Menu:
-        outline: "menu"
-        keysym: "Menu"
-    preferences:
-        action: "show_prefs"
-        outline: "special"
-        icon: "keyboard-mode-symbolic"
-    show_letters:
-        action:
-            set_view: "base"
-        outline: "altline"
-        label: "abc"
-    show_symbols:
-        action:
-            set_view: "symbols"
-        outline: "altline"
-        label: "[{/"
-    show_eschars:
-        action:
-            set_view: "eschars"
-        outline: "altline"
-        label: "func"
-    space:
-        outline: "spaceline"
-        label: " "
-        text: " "
-    Return:
-        outline: "altline"
-        icon: "key-enter"
-        keysym: "Return"
-    F1:
-        outline: "fkey"
-        keysym: "F1"
-    F2:
-        outline: "fkey"
-        keysym: "F2"
-    F3:
-        outline: "fkey"
-        keysym: "F3"
-    F4:
-        outline: "fkey"
-        keysym: "F4"
-    F5:
-        outline: "fkey"
-        keysym: "F5"
-    F6:
-        outline: "fkey"
-        keysym: "F6"
-    F7:
-        outline: "fkey"
-        keysym: "F7"
-    F8:
-        outline: "fkey"
-        keysym: "F8"
-    F9:
-        outline: "fkey"
-        keysym: "F9"
-    F10:
-        outline: "fkey"
-        keysym: "F10"
-    F11:
-        outline: "fkey"
-        keysym: "F11"
-    F12:
-        outline: "fkey"
-        keysym: "F12"
-    Esc:
-        outline: "altline"
-        keysym: "Escape"
-    Home:
-        outline: "action"
-        keysym: "Home"
-    End:
-        outline: "action"
-        keysym: "End"
-    Del:
-        outline: "altline"
-        keysym: "Delete"
-    PgUp:
-        outline: "action"
-        keysym: "Page_Up"
-    PgDn:
-        outline: "action"
-        keysym: "Page_Down"
-    Tab:
-        outline: "altline"
         keysym: "Tab"
-    "↑":
-        outline: "action"
+        label: "L"
+    s01:
+        outline: "default"
+        keysym: "BackSpace"
+        label: "R"
+    s02:
+        outline: "default"
+        text: "m"
+        label: "M"
+    s03:
+        outline: "default"
         keysym: "Up"
-    "↓":
-        outline: "action"
-        keysym: "Down"
-    "←":
-        outline: "action"
+        label: "↑"
+    s04:
+        outline: "default"
+        text: "s"
+        label: "S"
+    s05:
+        outline: "default"
+        text: "l"
+        label: "L"
+    s06:
+        outline: "default"
+        text: "x"
+        label: "X"
+    s07:
+        outline: "default"
         keysym: "Left"
-    "→":
-        outline: "action"
+        label: "←"
+    s08:
+        outline: "default"
         keysym: "Right"
+        label: "→"
+    s09:
+        outline: "default"
+        text: "y"
+        label: "Y"
+    s10:
+        outline: "default"
+        text: "a"
+        label: "A"
+    s11:
+        outline: "default"
+        keysym: "Down"
+        label: "↓"
+    s12:
+        outline: "default"
+        keysym: "Escape"
+        label: "SE"
+    s13:
+        outline: "default"
+        keysym: "Return"
+        label: "ST"
+    s14:
+        outline: "default"
+        text: "b"
+        label: "B"
 </pre>
 <p>
 <img src="keyboard_layout/7.jpg" class="maxSize"><br><br>
 
-司徒最後發現，官方的Keyboard Layout佈局還是比較適合觸控使用，司徒將原本的Ctrl、Alt改換成Tab、Ctrl(~/.local/share/squeekboard/keyboards/terminal/us.yaml)
+~/.local/share/squeekboard/keyboards/terminal/us.yaml
 </p>
 <pre>
 ---
@@ -303,7 +189,7 @@ views:
     numbers:
         - "Tab Ctrl ↑ ↓ ← →"
         - "1 2 3 4 5 6 7 8 9 0"
-        - "* # $ / & - _ + ( )"
+        - "* # $ / &amp; - _ + ( )"
         - "show_symbols   , \" ' colon ; ! ?  BackSpace"
         - "show_letters preferences         space        period Return"
     symbols:
@@ -359,7 +245,7 @@ buttons:
         action:
             set_view: "actions"
         outline: "altline"
-        label: ">_"
+        label: "&gt;_"
     period:
         outline: "altline"
         text: "."
@@ -479,7 +365,7 @@ buttons:
         label: "Alt"
 </pre>
 <p>
-<img src="keyboard_layout/9.jpg" class="maxSize">
+<img src="keyboard_layout/8.jpg" class="maxSize">
 </p>
 
 <p>
