FC3000 Fix 'undefined reference to __atomic_load_8' issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4734,6 +4734,10 @@ V1、V2升級刷機教學</a><br>
 <a href="handheld/fc3000/uboot_addr0.htm">
 解決"UBoot Failed to map physical memory"問題</a><br>
 
+&lowast;
+<a href="handheld/fc3000/fix_atomic.htm">
+解決"undefined reference to __atomic_load_8"問題</a><br>
+
 &oplus;
 <b>Assembly</b><br>
   
