--- a/mcu/mt7688/pinout.htm
+++ b/mcu/mt7688/pinout.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://oranwind.org/linkit-7688-linkit-smart-76887688-duo-ji-chu-jiao-xue/">linkit-7688</a><br><br>
+1. <a href="https://www.192-168-1-1-ip.co/manuals/1549.pdf">linkit-7688</a><br><br>
 
 如下：<br>
 <img src="pinout/1.jpg" class="maxSize">
