MT7688 Added develop board image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2887,6 +2887,10 @@ UART輸出</a><br>
 腳位</a><br>
 
 &lowast;
+<a href="mcu/mt7688/pcb.htm">
+開發板</a><br>
+
+&lowast;
 <a href="mcu/mt7688/fix_reboot.htm">
 為何系統一直重啟</a><br>
 
