MT7688 Add asm_setup page.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2891,16 +2891,16 @@ UART輸出</a><br>
 開發板</a><br>
 
 &lowast;
-<a href="mcu/mt7688/fix_reboot.htm">
-為何系統一直重啟</a><br>
-
-&lowast;
 <a href="mcu/mt7688/build_uboot.htm">
 Build UBoot</a><br>
 
 &lowast;
 <a href="mcu/mt7688/build_openwrt.htm">
 Build OpenWRT</a><br>
+
+&lowast;
+<a href="mcu/mt7688/fix_reboot.htm">
+為何系統一直重啟</a><br>
 
 &lowast;
 <a href="mcu/mt7688/build_kernel-3.18.44.htm">
@@ -2921,6 +2921,13 @@ Build Kernel 3.18.44</a><br>
 &lowast;
 <a href="mcu/mt7688/fix_xz.htm">
 解決"squashfs: SQUASHFS error: Filesystem uses "zlib" compression"問題</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688-duo/asm_setup.htm">
+  開發環境</a><br>
 <br><br><br><br>
 
 <div id="smart_mt7688-duo"></div>
