--- a/mcu.htm
+++ b/mcu.htm
@@ -2928,6 +2928,10 @@ Build Kernel 3.18.44</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mt7688-duo/asm_setup.htm">
   開發環境</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688/asm_led.htm">
+  LED</a><br>
 <br><br><br><br>
 
 <div id="smart_mt7688-duo"></div>
