MT7688 Add button example in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2932,6 +2932,10 @@ Build Kernel 3.18.44</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mt7688/asm_led.htm">
   LED</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688/asm_btn.htm">
+  Button</a><br>
 <br><br><br><br>
 
 <div id="smart_mt7688-duo"></div>
