--- a/mcu.htm
+++ b/mcu.htm
@@ -2936,6 +2936,10 @@ Build Kernel 3.18.44</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mt7688/asm_btn.htm">
   Button</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688/asm_clk.htm">
+  CPU Clock</a><br>
 <br><br><br><br>
 
 <div id="smart_mt7688-duo"></div>
