--- a/mcu.htm
+++ b/mcu.htm
@@ -2940,6 +2940,10 @@ Build Kernel 3.18.44</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mt7688/asm_clk.htm">
   CPU Clock</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688/asm_t0_poll.htm">
+  Timer0(Polling)</a><br>
 <br><br><br><br>
 
 <div id="smart_mt7688-duo"></div>
