MT7688 Added timer1_polling example in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2944,6 +2944,10 @@ Build Kernel 3.18.44</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mt7688/asm_t0_poll.htm">
   Timer0(Polling)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688/asm_t1_poll.htm">
+  Timer1(Polling)</a><br>
 <br><br><br><br>
 
 <div id="smart_mt7688-duo"></div>
