--- a/mcu.htm
+++ b/mcu.htm
@@ -2948,6 +2948,10 @@ Build Kernel 3.18.44</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mt7688/asm_t1_poll.htm">
   Timer1(Polling)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mt7688/asm_wdt_poll.htm">
+  Watchdog(Polling)</a><br>
 <br><br><br><br>
 
 <div id="smart_mt7688-duo"></div>
