FC3000 Run Debian 7(Wheezy) on FC3000.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4711,6 +4711,10 @@ V1、V2升級刷機教學</a><br>
 如何安裝官方RetroArch</a><br>
 
 &lowast;
+<a href="handheld/fc3000/wheezy.htm">
+安裝Debian Wheezy系統</a><br>
+
+&lowast;
 <a href="mcu/f1c100s/fix_microsd.htm">
 為何程式無法從MicroSD啟動</a><br>
 
