--- a/handheld.htm
+++ b/handheld.htm
@@ -4742,6 +4742,10 @@ V1、V2升級刷機教學</a><br>
 <a href="handheld/fc3000/fix_atomic.htm">
 解決"undefined reference to __atomic_load_8"問題</a><br>
 
+&lowast;
+<a href="handheld/fc3000/fix_cert.htm">
+解決"server certificate verification failed. CAfile..."問題</a><br>
+
 &oplus;
 <b>Assembly</b><br>
   
