--- a/handheld.htm
+++ b/handheld.htm
@@ -4746,6 +4746,10 @@ V1、V2升級刷機教學</a><br>
 <a href="handheld/fc3000/fix_cert.htm">
 解決"server certificate verification failed. CAfile..."問題</a><br>
 
+&lowast;
+<a href="handheld/fc3000/fix_dbus.htm">
+解決"Unable to connect to Upstart: Failed to connect to socket..."問題</a><br>
+
 &oplus;
 <b>Assembly</b><br>
   
