--- a/handheld.htm
+++ b/handheld.htm
@@ -4747,6 +4747,10 @@ V1、V2升級刷機教學</a><br>
 解決"server certificate verification failed. CAfile..."問題</a><br>
 
 &lowast;
+<a href="handheld/fc3000/fix_gpg.htm">
+解決"Release signed by unknown key (key id 40976EAF437D05B5)"問題</a><br>
+
+&lowast;
 <a href="handheld/fc3000/fix_dbus.htm">
 解決"Unable to connect to Upstart: Failed to connect to socket..."問題</a><br>
 
