FC3000 Fix archlinux key issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4754,6 +4754,10 @@ V1、V2升級刷機教學</a><br>
 <a href="handheld/fc3000/fix_dbus.htm">
 解決"Unable to connect to Upstart: Failed to connect to socket..."問題</a><br>
 
+&lowast;
+<a href="handheld/fc3000/fix_key.htm">
+解決"Import PGP key 77193F152BDBE6A6, "Arch Linux ARM Build System"問題</a><br>
+
 &oplus;
 <b>Assembly</b><br>
   
