Podman Fix podman.sock issue.

--- a/system/podman/fix_sock.htm
+++ b/system/podman/fix_sock.htm
@@ -54,9 +54,11 @@
 如下：
 </p>
 <pre>
-# yum install podman-remote
-# systemctl start podman.socket
-</pre><br>
+# systemctl enable podman.socket
+</pre>
+<p>
+P.S. 不需要安裝podman-remote
+</p>
 
 <p>
 <br><a href="../../system.htm">返回上一頁</a>
