Linux Device Driver Fix 'test_attr__enabled undeclared' issue.

--- a/driver.htm
+++ b/driver.htm
@@ -333,6 +333,10 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 &lowast;
 <a href="driver/ldd/fix_thumb2.htm">
 解決"unknown relocation: 10"問題</a><br>
+
+&lowast;
+<a href="driver/ldd/fix_test.htm">
+解決"error: test_attr__enabled undeclared"問題</a><br>
 <br><br><br><br>
 
 <div id="kmdf"></div>
