--- a/driver.htm
+++ b/driver.htm
@@ -337,6 +337,10 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 &lowast;
 <a href="driver/ldd/fix_test.htm">
 解決"error: test_attr__enabled undeclared"問題</a><br>
+
+&lowast;
+<a href="driver/ldd/fix_rwonce.htm">
+解決"fatal error: asm/rwonce.h file not found"問題</a><br>
 <br><br><br><br>
 
 <div id="kmdf"></div>
