Linux Device Driver Fix 'scripts/mod/modpost: not found' issue.

--- a/driver.htm
+++ b/driver.htm
@@ -335,6 +335,10 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 解決"unknown relocation: 10"問題</a><br>
 
 &lowast;
+<a href="driver/ldd/fix_modpost.htm">
+解決"scripts/mod/modpost: not found"問題</a><br>
+
+&lowast;
 <a href="driver/ldd/fix_test.htm">
 解決"error: test_attr__enabled undeclared"問題</a><br>
 
