--- a/driver/ldd/fix_rwonce.htm
+++ b/driver/ldd/fix_rwonce.htm
@@ -72,7 +72,7 @@ In file included from ./include/linux/export.h:43:
 解法：
 </p>
 <pre>
-# vim tools/bpf/Makefile +11
+$ vim tools/bpf/Makefile +11
     CFLAGS += -Wall -O2 -I$(srctree)/usr/include
 </pre><br>
 
