--- a/driver/ldd/fix_test.htm
+++ b/driver/ldd/fix_test.htm
@@ -53,7 +53,7 @@
 問題：
 </p>
 <pre>
-# make M=samples/bpf
+$ make M=samples/bpf
     make -C /usr/src/linux-source-4.19/samples/bpf/../../tools/lib/bpf/ RM='rm -rf' LDFLAGS= srctree=/usr/src/linux-source-4.19/samples/bpf/../../ O=
     Warning: Kernel ABI header at 'tools/include/uapi/linux/bpf.h' differs from latest version at 'include/uapi/linux/bpf.h'
     Warning: Kernel ABI header at 'tools/include/uapi/linux/netlink.h' differs from latest version at 'include/uapi/linux/netlink.h'
