--- a/handheld.htm
+++ b/handheld.htm
@@ -4687,6 +4687,10 @@ mksunxi.c</a><br>
 製作JTAG連接器</a><br>
 
 &lowast;
+<a href="handheld/fc3000/hack.htm">
+嘗試破解原廠系統</a><br>
+
+&lowast;
 <a href="handheld/fc3000/dump_spiflash.htm">
 Dump SPI Flash</a><br>
 
