FC3000 It is time to debug stock system via JTAG interface on Tiny200.

--- a/handheld/fc3000/hack.htm
+++ b/handheld/fc3000/hack.htm
@@ -61,6 +61,41 @@
 
 司徒使用黑箱測試後，發現最舊的TFT v1系統和最新的IPS v2系統都是使用同一種加密IC，因此，合理猜測全部的FC3000都是使用同一套加密算法，廠家真是相當貼心～<br>
 <img src="hack/2.jpg" class="maxSize"><br><br>
+
+由於FC3000的MicroSD控制方式是使用SPI介面，因此，缺少幾根JTAG腳位，不然就可以很方便的透過JTAG除錯<br>
+<img src="hack/3.jpg" class="maxSize"><br><br>
+
+司徒在之前的測試當中，有把對應的JTAG腳位找出來<br>
+<img src="hack/4.jpg" class="maxSize"><br><br>
+
+拉出一個專屬的JTAG排針<br>
+<img src="hack/5.jpg" class="maxSize"><br><br>
+
+可惜，這樣的方式相當容易跑飛<br>
+<img src="hack/6.jpg" class="maxSize"><br><br>
+
+司徒這次並沒有打算在FC3000上面做除錯的動作，而是想找一個完美軀體做借屍還魂測試，因此，首要任務就是需要把加密IC的腳位找出來，加密IC位置如下：<br>
+<img src="hack/7.jpg" class="maxSize"><br><br>
+
+解焊後<br>
+<img src="hack/8.jpg" class="maxSize"><br><br>
+
+查了一下電路，腳位如下：<br>
+<img src="hack/9.jpg" class="maxSize"> <img src="hack/10.jpg" class="maxSize"><br>
+可以看出，現今加密IC競爭激烈，連電池電量指示都需要包進去，真是一個相當辛苦的行業～<br><br>
+
+為了尋找完美的軀體，司徒再度來到芒果三兄弟的家裡，芒果三兄弟在上次超頻事件中，損失慘重，目前只剩下芒果大哥一人，大哥似乎知道司徒來訪的目的，輕聲細語跟司徒說：不要超頻，其餘都可以～<br>
+<img src="hack/11.jpg" class="maxSize"><br>
+<img src="hack/12.jpg" class="maxSize"><br><br>
+
+首先拆掉NAND Flash，換成FC3000的W25Q64<br>
+<img src="hack/13.jpg" class="maxSize"><br><br>
+
+接著接上加密IC、喇叭、按鍵(PE2, 按鍵RIGHT)，透過按鍵跟喇叭的測試，可以知道目前是否正常啟動官方系統<br>
+<img src="hack/14.jpg" class="maxSize"><br><br>
+
+MicroSD就可以接上JTAG進行除錯<br>
+<img src="hack/15.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
