C3100 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -80,6 +80,7 @@
   <a href="#c860"><img src="img/photos/c860.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C860"/></a>
   <a href="#c1000"><img src="img/photos/c1000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C1000"/></a>
   <a href="#c3000"><img src="img/photos/c3000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C3000"/></a>
+  <a href="#c3100"><img src="img/photos/c3100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C3100"/></a>
   <a href="#c3200"><img src="img/photos/c3200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C3200"/></a>
   <a href="#sl6000n"><img src="img/photos/sl6000n.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-6000N"/></a>
   <a href="#mi-e1"><img src="img/photos/mi-e1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-E1"/></a>
@@ -335,6 +336,16 @@ Recovery</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/c3000/opie_setup.htm">
     安裝系統</a><br>
+<br><br><br><br>
+
+<div id="c3100"></div>
+<h3><img src="img/photos/c3100.jpg" class="floatLeft"/>
+Zaurus SL-C3100</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/c3100/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 <div id="c3200"></div>
