--- a/umpc/c3100/review.htm
+++ b/umpc/c3100/review.htm
@@ -44,115 +44,24 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Zaurus SL-C700</h3>
-<p><b>機器比較表</b></p>
+<h3>Zaurus SL-C3100</h3>
+<p><b>介紹</b></p>
 <hr size="1">
 <p>
-參考資訊：<br>
-1. <a href="http://ezaurus.com/lineup/sl/compare_spec.html">spec</a><br><br>
-
-如下：
+簡要規格
 </p>
 <table>
-  <tr>
-    <td></td>
-    <td><img src="all_model/slc3200.jpg"></td>
-    <td><img src="all_model/slc3100.jpg"></td>
-    <td><img src="all_model/slc3000.jpg"></td>
-    <td><img src="all_model/slc1000.jpg"></td>
-    <td><img src="all_model/slc860.jpg"></td>
-    <td><img src="all_model/slc760.jpg"></td>
-    <td><img src="all_model/slc750.jpg"></td>
-    <td><img src="all_model/slc700.jpg"></td>
-  </tr>
-  <tr>
-    <th>Model</th>
-    <th>SL-C3200</th>
-    <th>SL-C3100</th>
-    <th>SL-C3000</th>
-    <th>SL-C1000</th>
-    <th>SL-C860</th>
-    <th>SL-C760</th>
-    <th>SL-C750</th>
-    <th>SL-C700</th>
-  </tr>
-  <tr>
-    <th>CPU</th>
-    <td>PXA270 416MHz</td>
-    <td>PXA270 416MHz</td>
-    <td>PXA270 416MHz</td>
-    <td>PXA270 416MHz</td>
-    <td>PXA255 400MHz</td>
-    <td>PXA255 400MHz</td>
-    <td>PXA255 400MHz</td>
-    <td>PXA250 400MHz</td>
-  </tr>
-  <tr>
-    <th>Flash</th>
-    <td>128MB</td>
-    <td>128MB</td>
-    <td>16MB</td>
-    <td>128MB</td>
-    <td>128MB</td>
-    <td>128MB</td>
-    <td>64MB</td>
-    <td>64MB</td>
-  </tr>
-  <tr>
-    <th>RAM</th>
-    <td>64MB</td>
-    <td>64MB</td>
-    <td>64MB</td>
-    <td>64MB</td>
-    <td>64MB</td>
-    <td>64MB</td>
-    <td>64MB</td>
-    <td>32MB</td>
-  </tr>
-  <tr>
-    <th>DISK</th>
-    <td>6GB</td>
-    <td>4GB</td>
-    <td>4GB</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <th>I/O</th>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td>V</td>
-    <td>V</td>
-    <td>V</td>
-    <td>V</td>
-  </tr>
-  <tr>
-    <th>USB</th>
-    <td>V</td>
-    <td>V</td>
-    <td>V</td>
-    <td>V</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <th>Battery</th>
-    <td>EA-BL11</td>
-    <td>EA-BL11</td>
-    <td>EA-BL11</td>
-    <td>EA-BL11</td>
-    <td>EA-BL08</td>
-    <td>EA-BL08</td>
-    <td>EA-BL06</td>
-    <td>EA-BL06</td>
-  </tr>
+  <tr><th>CPU</th><td>Intel XScale PXA270 416MHz</td></tr>
+  <tr><th>RAM</th><td>64MB</td></tr>
+  <tr><th>Flash</th><td>128MB</td></tr>
+  <tr><th>Disk</th><td>4GB</td></tr>
+  <tr><th>Screen</th><td>3.7" 640x480 電阻觸控</td></tr>
+  <tr><th>Slot</th><td>SDCard、CFCard</td></tr>
+  <tr><th>Keyboard</th><td>五排QWERTY</td></tr>
+  <tr><th>USB</th><td>Client、Host</td></tr>
+  <tr><th>Battery</th><td>3.7V 1800mA</td></tr>
+  <tr><th>Dimension</th><td>124mm x 87mm x 25mm</td></tr>
+  <tr><th>Weight</th><td>298g</td></tr>
 </table><br>
 
 <p>
