--- a/umpc.htm
+++ b/umpc.htm
@@ -362,6 +362,10 @@ Zaurus SL-C3200</h3>
 Recovery</a><br>
 
 &lowast;
+<a href="umpc/c3200/build_kernel-4.14.18.htm">
+build kernel 4.14.18</a><br>
+
+&lowast;
 <a href="umpc/c3200/fix_hdd.htm">
 解決"HDD not initialized"問題</a><br>
 
