C3200 How to replace CF Card (4GB).

--- a/umpc.htm
+++ b/umpc.htm
@@ -362,6 +362,10 @@ Zaurus SL-C3200</h3>
 Recovery</a><br>
 
 &lowast;
+<a href="umpc/c3200/replace_hdd.htm">
+替換內部HDD</a><br>
+
+&lowast;
 <a href="umpc/c3200/build_kernel-4.14.18.htm">
 build kernel 4.14.18</a><br>
 
