C3200 Fix 'rejected 1 configuration due to insufficient available bus power' issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -386,6 +386,13 @@ build kernel 4.14.18</a><br>
   &emsp;&emsp;&lowast;
   <a href="umpc/c3200/pdaxrom_setup.htm">
   安裝系統</a><br>
+
+&oplus;
+<b>Arch Linux</b><br>
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c3200/fix_usb.htm">
+  解決"rejected 1 configuration due to insufficient available bus power"問題</a><br>
+
 <br><br><br><br>
 
 <div id="sl6000n"></div>
