C3200 Fix fsck issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -390,6 +390,10 @@ build kernel 4.14.18</a><br>
 &oplus;
 <b>Arch Linux</b><br>
   &emsp;&emsp;&lowast;
+  <a href="umpc/c3200/fix_fsck.htm">
+  如何避免開機做fsck檢查</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="umpc/c3200/fix_usb.htm">
   解決"rejected 1 configuration due to insufficient available bus power"問題</a><br>
 
