C3200 Fix ext4 format issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -398,9 +398,12 @@ build kernel 4.14.18</a><br>
   如何避免開機做fsck檢查</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="umpc/c3200/fix_ext4.htm">
+  解決ext4無法被kexecboot識別的問題</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="umpc/c3200/fix_usb.htm">
   解決"rejected 1 configuration due to insufficient available bus power"問題</a><br>
-
 <br><br><br><br>
 
 <div id="sl6000n"></div>
