--- a/handheld/fc3000/wheezy.htm
+++ b/handheld/fc3000/wheezy.htm
@@ -68,10 +68,7 @@ $ sudo chroot wheezy
 # passwd
 # adduser user
 # nano /etc/apt/sources.list
-    deb http://deb.debian.org/debian buster main contrib non-free
-    deb http://deb.debian.org/debian buster-updates main contrib non-free
-    deb http://deb.debian.org/debian buster-backports main contrib non-free
-    deb http://deb.debian.org/debian-debug/ buster-debug main contrib non-free
+    deb http://archive.debian.org/debian wheezy main contrib non-free
 
 # apt-get update
 # apt-get install lxde obconf openbox lxdm lxde-common xbindkeys xdotool -y
