Linux Device Driver How to get current task struct.

--- a/driver.htm
+++ b/driver.htm
@@ -319,6 +319,10 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 如何調整fbcon的字型</a><br>
 
 &lowast;
+<a href="driver/ldd/task_st.htm">
+如何取得目前task struct</a><br>
+
+&lowast;
 <a href="driver/ldd/kallsyms.htm">
 如何取得系統上的Export Symbols</a><br>
 
