Linux Device Driver How to get current PID.

--- a/driver.htm
+++ b/driver.htm
@@ -307,6 +307,10 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 打印時間</a><br>
 
 &lowast;
+<a href="driver/ldd/get_pid.htm">
+如何取得目前PID</a><br>
+
+&lowast;
 <a href="driver/ldd/brightness.htm">
 如何控制背光亮度</a><br>
 
