Linux Device Driver How to get current cgroup_path.

--- a/driver.htm
+++ b/driver.htm
@@ -327,6 +327,10 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 如何取得目前task struct</a><br>
 
 &lowast;
+<a href="driver/ldd/get_cgroup_path.htm">
+如何取得目前cgroup_path</a><br>
+
+&lowast;
 <a href="driver/ldd/kallsyms.htm">
 如何取得系統上的Export Symbols</a><br>
 
