X350 Added review page.

--- a/handheld.htm
+++ b/handheld.htm
@@ -201,6 +201,7 @@
   <a href="#ps003"><img src="img/photos/ps003.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PS003"/></a>
   <a href="#onestation"><img src="img/photos/onestation.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="One Station"/></a>
   <a href="#mini-gamer"><img src="img/photos/mini-gamer.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Mini Retro Gamer"/></a>
+  <a href="#x350"><img src="img/photos/x350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="X350"/></a>
 </p>
 </div>
 
@@ -6201,6 +6202,17 @@ Mini Retro Gamer</h3>
 <a href="handheld/mini-gamer/screen.htm">
 可視角</a><br>
 <br><br><br><br>
+
+<div id="x350"></div>
+<h3><img src="img/photos/x350.jpg" class="floatLeft"/>
+X350</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/x350/review.htm">
+介紹</a><br>
+<br><br><br><br>
+
 
 </p>
 </div>
