X350 Added screen images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6211,8 +6211,11 @@ X350</h3>
 &lowast;
 <a href="handheld/x350/review.htm">
 介紹</a><br>
-<br><br><br><br>
 
+&lowast;
+<a href="handheld/x350/screen.htm">
+可視角</a><br>
+<br><br><br><br>
 
 </p>
 </div>
