X350 Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6213,6 +6213,10 @@ X350</h3>
 介紹</a><br>
 
 &lowast;
+<a href="handheld/x350/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="handheld/x350/screen.htm">
 可視角</a><br>
 <br><br><br><br>
