--- a/handheld.htm
+++ b/handheld.htm
@@ -6219,6 +6219,10 @@ X350</h3>
 &lowast;
 <a href="handheld/x350/screen.htm">
 可視角</a><br>
+
+&lowast;
+<a href="handheld/x350/dump_spi.htm">
+Dump SPI</a><br>
 <br><br><br><br>
 
 </p>
