C3200 It needs to connect a resistor (7K) between P2 and P3 for charging.

--- a/umpc/c3200/batt.htm
+++ b/umpc/c3200/batt.htm
@@ -60,6 +60,9 @@ EA-BL11的電池已經很難購買到<br>
 拆下原本的充電板<br>
 <img src="batt/4.jpg" class="maxSize"><br><br>
 
+中間的溫度感測電阻，記得連接一顆7K電阻到GND，不然不會有充電電壓<br>
+<img src="batt/10.jpg" class="maxSize"><br><br>
+
 連接電池<br>
 <img src="batt/5.jpg" class="maxSize"><br><br>
 
