FC3000 Fix '(key id 6FB2A1C265FFB764)' issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4752,6 +4752,10 @@ V1、V2升級刷機教學</a><br>
 解決"server certificate verification failed. CAfile..."問題</a><br>
 
 &lowast;
+<a href="handheld/fc3000/fix_gpg1.htm">
+解決"Release signed by unknown key (key id 6FB2A1C265FFB764)"問題</a><br>
+
+&lowast;
 <a href="handheld/fc3000/fix_gpg.htm">
 解決"Release signed by unknown key (key id 40976EAF437D05B5)"問題</a><br>
 
