C3200 How to install ArchLinux system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -394,6 +394,10 @@ build kernel 4.14.18</a><br>
 &oplus;
 <b>Arch Linux</b><br>
   &emsp;&emsp;&lowast;
+  <a href="umpc/c3200/arch_setup.htm">
+  安裝系統</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="umpc/c3200/fix_fsck.htm">
   如何避免開機做fsck檢查</a><br>
 
