C3200 Workaround: battery charging issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -398,6 +398,10 @@ build kernel 4.14.18</a><br>
   安裝系統</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="umpc/c3200/fix_charging.htm">
+  解決無法充電的問題</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="umpc/c3200/fix_fsck.htm">
   如何避免開機做fsck檢查</a><br>
 
