C860 How to do recovery.

--- a/umpc.htm
+++ b/umpc.htm
@@ -291,6 +291,10 @@ Zaurus SL-C860</h3>
 &lowast;
 <a href="umpc/c860/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="umpc/c860/recovery.htm">
+Recovery</a><br>
 <br><br><br><br>
 
 <div id="c1000"></div>
