C860 How to install cacko system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -295,6 +295,13 @@ Zaurus SL-C860</h3>
 &lowast;
 <a href="umpc/c860/recovery.htm">
 Recovery</a><br>
+
+&oplus;
+<b>Cacko</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c860/cacko_setup.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c1000"></div>
