C860 How to install pdaxrom.

--- a/umpc.htm
+++ b/umpc.htm
@@ -302,6 +302,13 @@ Recovery</a><br>
   &emsp;&emsp;&lowast;
   <a href="umpc/c860/cacko_setup.htm">
   安裝系統</a><br>
+
+&oplus;
+<b>pdaXrom</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c860/pdaxrom_setup.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c1000"></div>
