--- a/umpc/c860/pdaxrom_setup.htm
+++ b/umpc/c860/pdaxrom_setup.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Zaurus SL-C860 &gt;&gt; Cacko</h3>
+<h3>Zaurus SL-C860 &gt;&gt; pdaXrom</h3>
 <p><b>安裝系統</b></p>
 <hr size="1">
 <p>
@@ -52,9 +52,9 @@
 1. <a href="https://feed-zaurus.dahwa.fr/zaurusfr/">zaurusfr</a><br><br>
 
 步驟如下：<br>
-1. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.3/SL-C860-Qtopia-1.23-1029311005.zip">SL-C860-Qtopia-1.23-1029311005.zip</a><br>
+1. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.4/pdaxrom-rc12-c7x0-c860_kathrin-rc12-corgi.zip">pdaxrom-rc12-c7x0-c860_kathrin-rc12-corgi.zip</a><br>
 2. 格式化SDCard(1GB)成FAT16檔案系統且不要有磁碟標籤<br>
-3. 將SL-C860-Qtopia-1.23-1029311005.zip解壓縮至SDCard根目錄<br>
+3. 將pdaxrom-rc12-c7x0-c860_kathrin-rc12-corgi.zip解壓縮至SDCard根目錄<br>
 4. 將SDCard插入機器<br>
 5. 按住<b>OK</b>並且開機<br>
 <img src="cacko_setup/1.jpg" class="maxSize"><br>
@@ -65,13 +65,17 @@
 8. 選擇Y<br>
 <img src="cacko_setup/4.jpg" class="maxSize"><br>
 9. 選擇<b>Install new ROM</b><br>
-<img src="cacko_setup/5.jpg" class="maxSize"><br>
-<img src="cacko_setup/6.jpg" class="maxSize"><br>
-<img src="cacko_setup/7.jpg" class="maxSize"><br>
-<img src="cacko_setup/8.jpg" class="maxSize"><br>
-<img src="cacko_setup/9.jpg" class="maxSize"><br>
-<img src="cacko_setup/10.jpg" class="maxSize"><br>
-P.S. 如遇到空間不足，執行<b>Resize root partition</b>並且給予空間32MB即可
+<img src="pdaxrom_setup/1.jpg" class="maxSize"><br>
+<img src="pdaxrom_setup/2.jpg" class="maxSize"><br>
+<img src="pdaxrom_setup/3.jpg" class="maxSize"><br>
+<img src="pdaxrom_setup/4.jpg" class="maxSize"><br>
+<img src="pdaxrom_setup/5.jpg" class="maxSize"><br>
+10. 輸入<b>root</b><br>
+<img src="pdaxrom_setup/6.jpg" class="maxSize"><br>
+11. 輸入<b>startx</b>啟動X Window<br>
+<img src="pdaxrom_setup/7.jpg" class="maxSize"><br>
+<img src="pdaxrom_setup/8.jpg" class="maxSize"><br>
+P.S. 如遇到空間不足，執行<b>Resize root partition</b>並且給予空間45MB即可
 </p>
 
 <p>
