C860 How to install GPE.

--- a/umpc.htm
+++ b/umpc.htm
@@ -309,6 +309,16 @@ Recovery</a><br>
   &emsp;&emsp;&lowast;
   <a href="umpc/c860/pdaxrom_setup.htm">
   安裝系統</a><br>
+
+&oplus;
+<b>OpenZaurus</b><br>
+
+  &emsp;&emsp;&oplus;
+  GPE<br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/c860/gpe_setup.htm">
+    安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c1000"></div>
