C860 How to install OPIE.

--- a/umpc.htm
+++ b/umpc.htm
@@ -319,6 +319,13 @@ Recovery</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/c860/gpe_setup.htm">
     安裝系統</a><br>
+  
+  &emsp;&emsp;&oplus;
+  Opie<br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/c860/opie_setup.htm">
+    安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c1000"></div>
