C860 How to install zubuntu.

--- a/umpc.htm
+++ b/umpc.htm
@@ -326,6 +326,13 @@ Recovery</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/c860/opie_setup.htm">
     安裝系統</a><br>
+
+&oplus;
+<b>Zubuntu</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c860/zubuntu_setup.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c1000"></div>
