C860 Fix LCD refresh rate issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -333,6 +333,10 @@ Recovery</a><br>
   &emsp;&emsp;&lowast;
   <a href="umpc/c860/zubuntu_setup.htm">
   安裝系統</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c860/zubuntu_fix_clk.htm">
+  解決屏幕閃爍問題</a><br>
 <br><br><br><br>
 
 <div id="c1000"></div>
