C700 How to build encdec.

--- a/umpc.htm
+++ b/umpc.htm
@@ -153,6 +153,10 @@ Recovery</a><br>
 <a href="umpc/c700/uart.htm">
 焊接UART接頭</a><br>
 
+&lowast;
+<a href="umpc/c700/build_encdec.htm">
+build encdec</a><br>
+
 &oplus;
 <b>Cacko</b><br>
 
