C3200 Fix usb current issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -420,6 +420,10 @@ Recovery</a><br>
 替換內部HDD</a><br>
 
 &lowast;
+<a href="umpc/c3200/fix_usbr.htm">
+修改USB限流電阻</a><br>
+
+&lowast;
 <a href="umpc/c3200/build_kernel-4.14.18.htm">
 build kernel 4.14.18</a><br>
 
