C700 Added block diagram.

--- a/umpc.htm
+++ b/umpc.htm
@@ -130,6 +130,10 @@ Zaurus SL-C700</h3>
 拆機</a><br>
 
 &lowast;
+<a href="umpc/c700/block.htm">
+方塊圖</a><br>
+
+&lowast;
 <a href="umpc/c700/io.htm">
 I/O腳位</a><br>
 
