C1000 How to do recovery.

--- a/umpc.htm
+++ b/umpc.htm
@@ -355,6 +355,10 @@ Zaurus SL-C1000</h3>
 &lowast;
 <a href="umpc/c1000/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="umpc/c1000/recovery.htm">
+Recovery</a><br>
 <br><br><br><br>
 
 <div id="c3000"></div>
