--- a/umpc.htm
+++ b/umpc.htm
@@ -1170,6 +1170,10 @@ Keyboard FeatherWing</h3>
 <a href="umpc/featherwing/sch.htm">
 電路圖</a><br>
 
+&lowast;
+<a href="umpc/featherwing/lcd.htm">
+LCD腳位</a><br>
+
 &oplus;
 <b>馬沙機 (Massage)</b><br>
 
