C1000 How to install cako system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -359,6 +359,13 @@ Zaurus SL-C1000</h3>
 &lowast;
 <a href="umpc/c1000/recovery.htm">
 Recovery</a><br>
+
+&oplus;
+<b>Cacko</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c1000/cacko_setup.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c3000"></div>
