C1000 How to install pdaxrom system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -366,6 +366,13 @@ Recovery</a><br>
   &emsp;&emsp;&lowast;
   <a href="umpc/c1000/cacko_setup.htm">
   安裝系統</a><br>
+
+&oplus;
+<b>pdaXrom</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c1000/pdaxrom_setup.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c3000"></div>
