--- a/umpc/c1000/pdaxrom_setup.htm
+++ b/umpc/c1000/pdaxrom_setup.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Zaurus SL-C3200 &gt;&gt; pdaXrom</h3>
+<h3>Zaurus SL-C1000 &gt;&gt; pdaXrom</h3>
 <p><b>安裝系統</b></p>
 <hr size="1">
 <p>
@@ -52,9 +52,9 @@
 1. <a href="https://feed-zaurus.dahwa.fr/zaurusfr/">zaurusfr</a><br><br>
 
 步驟如下：<br>
-1. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.6/weeXpc_1.8_installation.zip">weeXpc_1.8_installation.zip</a><br>
+1. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.4/pdaxrom-rc12-c1000-c3100_kathrin-rc12-akita.zip">pdaxrom-rc12-c1000-c3100_kathrin-rc12-akita.zip</a><br>
 2. 格式化SDCard(2GB)成FAT16檔案系統且不要有磁碟標籤<br>
-3. 將weeXpc_1.8_installation.zip的RECOVERY內容解壓縮至SDCard根目錄<br>
+3. 將pdaxrom-rc12-c1000-c3100_kathrin-rc12-akita.zip解壓縮至SDCard根目錄<br>
 4. 將SDCard插入機器<br>
 5. 按住<b>OK</b>並且開機<br>
 <img src="cacko_setup/1.jpg" class="maxSize"><br>
