--- a/umpc/c3200/fix_charging.htm
+++ b/umpc/c3200/fix_charging.htm
@@ -48,8 +48,7 @@
 <p><b>解決無法充電的問題</b></p>
 <hr size="1">
 <p>
-Workaround：進入<b>Service Dialog</b>充電(D + M)<br>
-<img src="fix_charging/1.jpg" class="maxSize">
+使用5V 2.0A以上的充電器
 </p>
 
 <p>
