--- a/umpc.htm
+++ b/umpc.htm
@@ -474,6 +474,10 @@ build kernel 4.14.18</a><br>
   安裝系統</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="umpc/c3200/arch_hdd.htm">
+  如何安裝系統到HDD</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="umpc/c3200/fix_charging.htm">
   解決無法充電的問題</a><br>
 
