Pro1 X Added review page.

--- a/phone.htm
+++ b/phone.htm
@@ -83,6 +83,7 @@
   <a href="#curve9320"><img src="img/photos/curve9320.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Blackberry Curve9320"/></a>
   <a href="#xt894"><img src="img/photos/xt894.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Motorola XT894"/></a>
   <a href="#xt897"><img src="img/photos/xt897.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Motorola XT897"/></a>
+  <a href="#pro1x"><img src="img/photos/pro1x.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="F(x)tec Pro1 X"/></a>
   <a href="#pro1"><img src="img/photos/pro1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="F(x)tec Pro1"/></a>
   <a href="#titan"><img src="img/photos/titan.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Unihertz Titan"/></a>
   <a href="#pixel3axl"><img src="img/photos/pixel3axl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Google Pixel 3a XL"/></a>
@@ -1945,6 +1946,16 @@ Motorola XT897</h3>
   &emsp;&emsp;&lowast;
   <a href="phone/xt897/debian_console_null.htm">
   為何Kernel沒有輸出任何Printk訊息</a><br>
+<br><br><br><br>
+
+<div id="pro1x"></div>
+<h3><img src="img/photos/pro1x.jpg" class="floatLeft"/>
+F(x)tec Pro1 X</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="phone/pro1x/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 <div id="pro1"></div>
