--- a/phone.htm
+++ b/phone.htm
@@ -1956,6 +1956,10 @@ F(x)tec Pro1 X</h3>
 &lowast;
 <a href="phone/pro1x/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="phone/pro1x/fix_partition.htm">
+解決"FAILED (remote: Partition not found)"問題</a><br>
 <br><br><br><br>
 
 <div id="pro1"></div>
