Pro1 X Fix 'error: Cannot generate image for userdata' issue.

--- a/phone.htm
+++ b/phone.htm
@@ -1960,6 +1960,10 @@ F(x)tec Pro1 X</h3>
 &lowast;
 <a href="phone/pro1x/fix_partition.htm">
 解決"FAILED (remote: Partition not found)"問題</a><br>
+
+&lowast;
+<a href="phone/pro1x/fix_userdata.htm">
+解決"error: Cannot generate image for userdata"問題</a><br>
 <br><br><br><br>
 
 <div id="pro1"></div>
