--- a/phone/pro1x/fix_userdata.htm
+++ b/phone/pro1x/fix_userdata.htm
@@ -46,19 +46,22 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>F(x)tec Pro1 X</h3>
-<p><b>解決"FAILED (remote: Partition not found)"問題</b></p>
+<p><b>解決"error: Cannot generate image for userdata"問題</b></p>
 <hr size="1">
 <p>
 問題如下：
 </p>
 <pre>
-$ fastboot flash system_a system.img
-    target reported max download size of 805306368 bytes
-    sending sparse 'system_a' 1/4 (728871 KB)...
-    OKAY [ 18.374s]
-    writing 'system_a' 1/4...
-    FAILED (remote: Partition not found)
-    finished. total time: 18.376s
+$ fastboot format:ext4 userdata
+    Warning: userdata type is f2fs, but ext4 was requested for formatting.
+    mke2fs 1.44.5 (15-Dec-2018)
+
+    Warning: RAID stripe-width 1 not an even multiple of stride 2.
+
+    /tmp/TemporaryFile-hADjY5: Unimplemented ext2 library function while setting up superblock
+    /usr/lib/android-sdk/platform-tools/mke2fs failed with status 1
+    mke2fs failed: 1
+    error: Cannot generate image for userdata
 </pre>
 <p>
 解法：使用新版platform-tools，如：platform-tools_r33.0.3-linux.zip
