--- a/phone.htm
+++ b/phone.htm
@@ -1964,6 +1964,13 @@ F(x)tec Pro1 X</h3>
 &lowast;
 <a href="phone/pro1x/fix_userdata.htm">
 解決"error: Cannot generate image for userdata"問題</a><br>
+
+&oplus;
+<b>Ubuntu Touch</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/install_ubuntu.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="pro1"></div>
