Pro1 X How to install droidian.

--- a/phone.htm
+++ b/phone.htm
@@ -1966,6 +1966,13 @@ F(x)tec Pro1 X</h3>
 解決"error: Cannot generate image for userdata"問題</a><br>
 
 &oplus;
+<b>Droidian</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/install_droidian.htm">
+  安裝系統</a><br>  
+
+&oplus;
 <b>Ubuntu Touch</b><br>
 
   &emsp;&emsp;&lowast;
