Pro1 X How to control keyboard backlight.

--- a/phone.htm
+++ b/phone.htm
@@ -1972,6 +1972,10 @@ F(x)tec Pro1 X</h3>
   <a href="phone/pro1x/install_droidian.htm">
   安裝系統</a><br>  
 
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/dd_kbd.htm">
+  如何控制鍵盤背光</a><br>  
+
 &oplus;
 <b>Ubuntu Touch</b><br>
 
