Pro1 X Updated droidian account information.

--- a/phone/pro1x/install_droidian.htm
+++ b/phone/pro1x/install_droidian.htm
@@ -112,7 +112,8 @@ $ ./flash_all.sh
 </pre><br>
 <p>
 完成<br>
-<img src="install_droidian/1.jpg" class="maxSize">
+<img src="install_droidian/1.jpg" class="maxSize"><br>
+P.S. droidian:1234
 </p>
 
 <p>
