Pro1 X Fix settings crash issue.

--- a/phone.htm
+++ b/phone.htm
@@ -1976,6 +1976,10 @@ F(x)tec Pro1 X</h3>
   <a href="phone/pro1x/dd_kbd.htm">
   如何控制鍵盤背光</a><br>  
 
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/dd_fix_settings.htm">
+  解決Settings無法開啟的問題</a><br>  
+
 &oplus;
 <b>Ubuntu Touch</b><br>
 
