C1000 How to install GPE system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -373,6 +373,16 @@ Recovery</a><br>
   &emsp;&emsp;&lowast;
   <a href="umpc/c1000/pdaxrom_setup.htm">
   安裝系統</a><br>
+
+&oplus;
+<b>OpenZaurus</b><br>
+
+  &emsp;&emsp;&oplus;
+  GPE<br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/c1000/gpe_setup.htm">
+    安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c3000"></div>
